--- a/speechmatics-async/Cargo.toml
+++ b/speechmatics-async/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-tokio-tungstenite = { version = "0.19.0", features = [] }
+tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
 base64 = "0.21.4"
 futures = "0.3.28"
 futures-io = "0.3.28"
@@ -16,8 +16,5 @@ log = "0.4.20"
 rand = "0.8.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = "*"
+tokio = { version = "*", features = ["macros", "rt", "sync"] }
 url = "2.4.1"
-
-[dev-dependencies]
-tokio = { version = "*", features = ["macros", "rt"] }
