--- a/speechmatics-async/Cargo.toml
+++ b/speechmatics-async/Cargo.toml
@@ -18,3 +18,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "*", features = ["macros", "rt", "sync"] }
 url = "2.4.1"
+reqwest = { version = "0.11.20", features = ["multipart"] }
