--- a/speechmatics-async/Cargo.toml
+++ b/speechmatics-async/Cargo.toml
@@ -20,6 +20,10 @@ tokio = { version = "*", features = ["macros", "rt", "sync", "rt-multi-thread"],
 url = "2.4.1"
 reqwest = { version = "0.11.20", features = ["multipart", "stream", "json"], optional = true }
 
+[dev-dependencies.async-std]
+version = "1.12.0"
+features = ["attributes"]
+
 [features]
 realtime = ["dep:tokio-tungstenite", "dep:tokio"]
 batch = ["dep:reqwest", "dep:rand", "dep:http"]
