--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,15 +19,15 @@ jobs:
       - name: "Check out the repo"
         uses: actions/checkout@v3
 
-      - uses: "actions-rs/toolchain@v1"
+      - uses: dtolnay/rust-toolchain@stable
         with:
           profile: "minimal"
           toolchain: "stable"
           override: true
 
-      - uses: "actions-rs/cargo@v1"
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          command: "check"
+          command: "cargo check"
 
   test:
     name: "Cargo test"
@@ -42,9 +42,9 @@ jobs:
           toolchain: "stable"
           override: true
 
-      - uses: "actions-rs/cargo@v1"
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          command: "test"
+          command: "cargo test"
         env:
           API_KEY: ${{ secrets.API_KEY }}
 
@@ -55,7 +55,7 @@ jobs:
       - name: "Check out the repo"
         uses: actions/checkout@v3
 
-      - uses: "actions-rs/toolchain@v1"
+      - uses: dtolnay/rust-toolchain@stable
         with:
           profile: "minimal"
           toolchain: "stable"
@@ -63,9 +63,9 @@ jobs:
           
       - run: "rustup component add rustfmt"
 
-      - uses: "actions-rs/cargo@v1"
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          command: "fmt"
+          command: "cargo fmt"
           args: "--all -- --check"
 
   clippy:
@@ -75,7 +75,7 @@ jobs:
       - name: "Check out the repo"
         uses: actions/checkout@v3
 
-      - uses: "actions-rs/toolchain@v1"
+      - uses: dtolnay/rust-toolchain@stable
         with:
           profile: "minimal"
           toolchain: "stable"
@@ -83,8 +83,8 @@ jobs:
 
       - run: "rustup component add clippy"
 
-      - uses: "actions-rs/cargo@v1"
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          command: "clippy"
+          command: "rustup clippy"
           args: "-- -D warnings"
 
