--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
       - name: "Check out the repo"
         uses: actions/checkout@v3
 
-      - uses: "actions-rs/toolchain@v1"
+      - uses: "dtolnay/rust-toolchain@stable"
         with:
           profile: "minimal"
           toolchain: "stable"
