--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ log = "0.4.20"
 rand = { version = "0.8.5", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "*", features = ["macros", "rt", "sync", "rt-multi-thread"], optional = true }
+tokio = { version = "1.33", features = ["macros", "rt", "sync", "rt-multi-thread"], optional = true }
 url = "2.4.1"
 reqwest = { version = "0.11.20", features = ["multipart", "stream", "json"], optional = true }
 
