--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "speechmatics"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 keywords = ["websocket", "speechmatics", "asr", "async"]
 authors = ["Tudor Evans"]
@@ -26,6 +26,8 @@ serde_json = "1.0"
 tokio = { version = "1.33", features = ["macros", "rt", "sync", "rt-multi-thread"], optional = true }
 url = "2.4.1"
 reqwest = { version = "0.11.20", features = ["multipart", "stream", "json"], optional = true }
+type-map = "0.5.0"
+typemap = "0.3.3"
 
 [dev-dependencies.async-std]
 version = "1.12.0"
